tests/expectations/compiler/definition/use_decl_variable_as_assign_fail.out
Error [ETYC0372005]: Unknown variable `b`
    --> compiler-test:4:18
     |
   4 |     	let b: u8 = b;
     |                  ^
